--- a/reglas_estilos (1).html
+++ b/reglas_estilos (1).html
@@ -8,7 +8,7 @@ Conviene indicar el juego de caracteres empleado-->
     <!--Conviene indicar el juego de caracteres empleado-->
     <meta charset="utf-8" />
     <title>World Wide Web</title>
-    <link href="css/estilos.css" rel="stylesheet" type="text/css"> 
+    <link href="C://Users//ALEXANDER HM//Documents//Practica1_html_basico//Desarrollo_basado_en_plataformas-1//estilos.css" rel="stylesheet" type="text/css"> 
 </head>
 
 <body>
@@ -35,7 +35,7 @@ Conviene indicar el juego de caracteres empleado-->
     
 
     <h3>Pilares Fundamentales de Tim Berners-Lee</h3>
-    <ul>
+    <ul id="colores">
         <li>HTML</li>
         <li>HTTP</li>
         <li>URL</li>
