--- a/Practica2_viernes/listas.html
+++ b/Practica2_viernes/listas.html
@@ -4,39 +4,42 @@
 <head>
     <meta charset="utf-8" />
     <title>Ejemplo de listas</title>
+    <link rel="stylesheet" href="C:\Users\ALEXANDER HM\Documents\GitHub\Desarrollo_css//listas.css" type="text/css">
+    
+
 </head>
 
 <body>
     <p>Lista sin elemento gráfico:</p>
-    <ul>
+    <ul class="lista_sn">
         <li>Elemento 1</li>
         <li>Elemento 2</li>
         <li>Elemento 3</li>
     </ul>
 
     <p>Lista con círculos:</p>
-    <ul>
+    <ul class="lista_circulos">
         <li>Elemento 1</li>
         <li>Elemento 2</li>
         <li>Elemento 3</li>
     </ul>
 
     <p>Lista con cuadrados:</p>
-    <ul>
+    <ul class="lista_cuadrados">
         <li>Elemento 1</li>
         <li>Elemento 2</li>
         <li>Elemento 3</li>
     </ul>
 
     <p>Lista con números romanos:</p>
-    <ol>
+    <ol class="lista_romanos">
         <li>Elemento 1</li>
         <li>Elemento 2</li>
         <li>Elemento 3</li>
     </ol>
 
     <p>Lista con letras griegas:</p>
-    <ol>
+    <ol class="lista_griegos">
         <li>Elemento 1</li>
         <li>Elemento 2</li>
         <li>Elemento 3</li>
