--- a/Practica2_viernes/maquetacion_responsivo.html
+++ b/Practica2_viernes/maquetacion_responsivo.html
@@ -3,6 +3,9 @@
     <head>
         <meta charset="utf-8" />
         <title>Curriculum Vitae de Bruce Wayne</title>
+        <link rel="stylesheet" href="C://Users//ALEXANDER HM//Documents//GitHub//Desarrollo_basado_en_plataformas//Practica2_viernes//css//maquetacion_Responsivo.css" type="text/css">
+    
+
     </head>
     <body>
 
