--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
             <li><a href="componentes.html">Practica 1: Html - Componentes</a></li>
             <li><a href="reglas_estilos.html">Practica 2: Css - Reglas de Estilo Básica</a></li>
             <li><a href="Practica2_viernes/selectores.html">Practica 3: Selectores</a></li>
+            <li><a href="Practica2_viernes/selectores.html">Practica 3: Selectores</a></li>
         </ul>
     </body>
 </html>
