--- a/Practica2_viernes/menu.html
+++ b/Practica2_viernes/menu.html
@@ -4,9 +4,10 @@
 <head>
 	<meta charset="utf-8">
 	<title>Animaciones</title>
+    <link rel="stylesheet" href="C://Users//ALEXANDER HM//Documents//GitHub//Desarrollo_basado_en_plataformas//Practica2_viernes//css//menu.css" type="text/css">
 </head>
 <body>
-	<h5>Menú de opciones</h5>
+	<h3>Menú de opciones</h3>
 	<ul class="nav">
 		<li><a href="http://www.desarrolloweb.com/html/">HTML</a></li>
 		<li><a href="http://www.desarrolloweb.com/css/">CSS</a></li>
