--- a/Practica2_viernes/otros selectores.html
+++ b/Practica2_viernes/otros selectores.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <title>Ejercicio de selectores</title>
-    <link rel="stylesheet" href="css/otros_selectores.css" type="text/css">
+    <link rel="stylesheet" href="C://Users//ALEXANDER HM//Documents//GitHub//Desarrollo_basado_en_plataformas//Practica2_viernes//css//otros_selectore.css" type="text/css">
     </head>
     <body>
         <h1>Universidad de Alicante</h1>
