--- a/Practica2_viernes/album.html
+++ b/Practica2_viernes/album.html
@@ -28,17 +28,17 @@
 			</li>
 			<li>
 				<a href="#" title="Mi moto">
-					<img src="imagenes/rene.jpg" alt="" border="0" >
+					<img src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/dragon-ball-super-goku-ultra-instinto-1549463584.jpg?crop=1.00xw:0.893xh;0,0&resize=1200:*" alt="" border="0" >
 				</a>
 			</li>
 			<li>
 				<a href="#" title="Toledo">
-					<img src="imagenes/burrito.jpg" alt="" border="0" >
+					<img src="https://i.pinimg.com/originals/ae/bb/2a/aebb2aba5805a17893f72429b5995ee2.jpg" alt="" border="0" >
 				</a>
 			</li>
 			<li>
 				<a href="#" title="Mi coneja">
-					<img src="imagenes/32.jpeg" alt="" border="0" >
+					<img src="https://as.com/meristation/imagenes/2019/12/17/videos/1576582038_655472_1576582318_noticia_normal.jpg" alt="" border="0" >
 				</a>
 			</li>
 		</ul>
