--- a/Practica_hoteles/index.html
+++ b/Practica_hoteles/index.html
@@ -41,7 +41,7 @@
     <div class="container">
         <nav aria-label="breadcrumb">
             <ol class="breadcrumb">
-                <li class="breadcrumb-item active" aria-current="page">Home</li>
+                <li class="breadcrumb-item active" aria-current="page"><a href="#">Home</a></li>
             </ol>
         </nav>
         <div class="row">
