--- a/Practica_hoteles/Javascript/componentesjs.html
+++ b/Practica_hoteles/Javascript/componentesjs.html
@@ -2,8 +2,9 @@
 <html lang="es">
 
 <head>
-    <meta charset="UTF-8">
-    <title>Practica js</title>
+    <meta charset="utf-8">
+    <title>Prácticas js</title>
+    <link href="css/formularios.css" rel="stylesheet" type="text/css">
     <script type="text/javascript" src="js/documento.js"></script>
     <script type="text/javascript" src="js/formulario.js"></script>
 </head>
@@ -12,10 +13,10 @@
     <h2>Saludo en Javascript</h2>
     <input type="button" value="saludar" onclick="saludar()">
 
-    <h2>Suma de dos numeros</h2>
-    <label>Numero 1: </label> <input type="text" name="n1" id="n1"><br>
-    <label>Numero 2: </label> <input type="text" name="n2" id="n2">
-    <button onclick="sumar()">Calcular</button>
+    <h2>Suma de dos números</h2>
+    <label>Número 1:</label> <input type="text" name="n1" id="n1"><br>
+    <label>Número 2:</label> <input type="text" name="n2" id="n2"><br>
+    <button onclick="sumar()"> Calular</button>
 
     <h2>Manejo de Cadenas</h2>
     <label id="cadena">Pulse aquí para invertir la cada</label>
@@ -25,23 +26,28 @@
     <form>
         <label>Ingrese sus nombres</label>
         <input type="text" name="nombres" id="nombres">
-        <button onclick="validarFormulario()">Registrar</button>
+        <button onclick="validarFomulario()">Registrar</button>
     </form>
 
     <h2>Validación de Formularios 2</h2>
     <form name="formulario">
         <label>Ingrese sus nombres </label>
-        <input type="text" name="nombres1" id="nombres1"> <span id="mensaje_nombres"></span><br>
+        <input type="text" name="nombres1" id="nombres1"> <span id="mensaje_nombres" class="mensaje_nombres"></span><br>
         <label>Ingrese sus email </label>
         <input type="email" name="email" id="email"><br>
         <label>Ingrese sus Clave </label>
         <input type="password" name="password" id="password"><br>
-        <label>Repetir su Clave </label>
+        <label>Ingrese sus Repetir Clave  </label>
         <input type="password" name="password1" id="password1"><br>
         <button type="button" id="btn_validar"> Registrar </button>
     </form>
-
-
 </body>
 
 </html>
+
+
+
+
+
+
+
